style.css
* {
    font-family: "Roboto", sans-serif;
    margin: 0px;
    padding: 0px;
}

ul {
    list-style-type: none;
    display: flex;
}

/*Header------------------------------------------------------------*/
.header{
    background-color: #1F2937;
    padding:36px 240px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    min-width:709px;
}

.header .logo{
    font-size: 24px;
    color: #F9FAF8;
}

.header ul {
    font-size: 18px;
    gap: 16px;
    color: #E5E7EB;
}

/*Section one------------------------------------------------------------*/
.one{
    background-color: #1F2937;
    padding: 80px 240px;
    display: flex;
    justify-content: space-between;
    align-content: center;
    gap: 16px;
    margin:0px;
}

.main-text{
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    padding-bottom: 8px;
    max-width: 360px;
}

.subtext{
    font-size: 18px;
    color: #E5E7EB;
    padding-bottom: 12px;
    max-width: 360px;
}

.one .button{
    background-color: #3882F6;
    font-size: 18px;
    color: #E5E7EB;
    max-width: 100px;
    text-align: center;
    padding: 8px 15px;
    border-radius: 8px;
}

.holder{
    background-color: grey;
    color: white;
    padding: 100px;
    text-align: center;
    height: auto;
}


/*Section two------------------------------------------------------------*/
.two{
    text-align: center;
    padding: 36px;
    margin-bottom: 36px;
}

.subtitle{
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
    margin-bottom: 24px;
}

.two ul{
    justify-content: center;
    gap: 18px;
}

.two li{
    max-width: 150px;
    align-items: center;
}

.box{
    padding: 24px;
    border:2px solid  #3882F6;
    height: 80px;
    width: 80px;
}


/*Section three------------------------------------------------------------*/
.three{
    background-color: #E5E7EB;
    padding: 120px 240px;
    text-align: center;
}

.quote{
    font-size: 36px;
    color: #1F2937;
    font-style: italic;
    font-weight: lighter;
    margin-bottom: 16px;
}

.author{
    color: #1F2937;
    font-size: 18px;
    font-weight: 700;
    text-align: end;
}

/*Section four------------------------------------------------------------*/
.four{
    margin: 64px;
    gap: 24px;
    justify-content: center;
}

.container{
    background-color: #3882F6;
    padding: 36px;
    display:flex;
    justify-content: space-around;
    align-items: center;
    gap: 16px;
    max-width: 500px;
}

.four .main-text{
    font-size: 18px;
}

.four .button{
    color: white;
    border: 4px;
    border-color: white;
    padding: 12px;
}

/*Footer---------------------------------------------------------------*/
.footer{
    background-color:#1F2937;
    color: white;
    font-size: 18px;
    text-align: center;
    padding: 36px;
    margin: 0px;
}

